--- a/.gitignore
+++ b/.gitignore
@@ -1,82 +1,23 @@
-######################
-# Project Specific
-######################
-/css/*
-/build/**
-/test/coverage/
-/dist/**
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-######################
-# Node
-######################
-/node/
-node_tmp/
-node_modules/
-npm-debug.log.*
-/.awcache/*
-/.cache-loader/*
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-######################
-# SASS
-######################
-.sass-cache/
+# testing
+/coverage
 
-######################
-# Intellij
-######################
-.idea/
-*.iml
-*.iws
-*.ipr
-*.ids
-*.orig
-classes/
-out/
+# production
+/build
 
-######################
-# Visual Studio Code
-######################
-.vscode/
-
-######################
-# Windows
-######################
-# Windows image file caches
-Thumbs.db
-
-# Folder config file
-Desktop.ini
-
-######################
-# Mac OSX
-######################
+# misc
 .DS_Store
-.svn
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-######################
-# Logs
-######################
-*.log*
-
-######################
-# Others
-######################
-*.class
-*.*~
-*~
-.merge_file*
-
-######################
-# ESLint
-######################
-.eslintcache
-
-
-todo.md
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
